Change-Id: I64008dc8bc53122d9a532d755220238bfbdd3c90

--- a/src/main/resources/static/partial/app/resource.html
+++ b/src/main/resources/static/partial/app/resource.html
@@ -1,24 +1,56 @@
 <script type="text/javascript">
 (function(){
     'use strict';
-    function ProgramController($scope, $injector){
-        console.log("module controller");
-        console.log(this);
-        var vm = this;
-        vm.number = 3588500;
-        vm.text = "module user test";
-    }
-    
-    ProgramController.injector = ["$scope", "$injector"];
     angular.module("programModule")
-    .controller("ProgramController", ProgramController);
+    .controller("searchController",["$state", "Authentication", "constants", "$kWindow", "$cookies", "Login.CookieKey", "$timeout",
+                                    function($state, Authentication, constants, $kWindow, $cookies, CookieKey, $timeout) {
+           
+            var self = this;
+            self.buttonDisabled = false; //button diabled
+            self.search = function(){
+                var windowInstance = $kWindow.open({
+                    options:{
+                        modal: true,
+                        title: "search item",
+                        resizable: true,
+                        height: 800,
+                        width: 500,
+                        visible: false
+                    },
+                    windowTemplateUrl: constants.popTemplUrl + "window.html",
+                    templateUrl: constants.popTemplUrl + "SearchPopup.html",
+                    controller: ["$scope", "$windowInstance", "item", function($scope, $windowInstance, item){
+                        $scope.item = $("#search").val();
+                        $scope.$windowInstance = $windowInstance;
+                        console.log(item);
+                    }],
+                    resolve: {
+                        item : function () {
+                            return "search item"
+                        }
+                    }
+                });
+                windowInstance.result.then(function (result) {
+                    if (result) {
+                        self.result = "confirmed!";
+                    }
+                    else{
+                        self.result = "canceled!";
+                    }
+                });
+            };
+            
+        }])
+    
 })();
 </script>
-<div id="program" dynamic-controller="ProgramController as vm">
-    <div class="content">
-        <p>resource</p>
-        <p>{{vm.id}}</p>
-        <p>{{vm.number | currency }}</p>
-        <span>{{vm.text}}</span>
+<div id="program" dynamic-controller="searchController as vm">
+ 
+    <div class="poptest" >
+    <input type="text" id="search" />
+    <button type="button" id="btn_search" ng-click="vm.search()" >버튼</button>
     </div>
+        
 </div>
+
+
